--- a/views/appointment_template.xml
+++ b/views/appointment_template.xml
@@ -21,19 +21,19 @@
                                    </div>
                                    <t t-if="mode == 'registered'">
                                        <div class="form-group col-xl-6">
-                                           <label class="control-label" for="name">Your Name</label>
+                                           <label class="control-label" for="name">Nombre</label>
                                            <div>
                                                <input type="text" class="form-control" readonly="True" name="name" t-att-value="name"/>
                                            </div>
                                        </div>
                                        <div class="form-group col-xl-6">
-                                           <label class="control-label" for="name">Your Email</label>
+                                           <label class="control-label" for="name">Correo electronico</label>
                                            <div>
                                                <input type="text" class="form-control" name="email" readonly="True" t-att-value="email"/>
                                            </div>
                                        </div>
                                        <div class="form-group col-xl-6">
-                                           <label class="control-label" for="name">Your Phone</label>
+                                           <label class="control-label" for="name">Telefono</label>
                                            <div>
                                                <input type="text" class="form-control" name="phone" readonly="True" t-att-value="phone"/>
                                            </div>
@@ -41,30 +41,30 @@
                                    </t>
                                    <t t-else="">
                                        <div t-attf-class="form-group #{error.get('name') and 'o_has_error' or ''} col-xl-6">
-                                           <label class="control-label" for="name">Your Name</label>
+                                           <label class="control-label" for="name">Nombre completo</label>
                                            <div>
                                                <input type="text" name="name" t-attf-class="form-control #{error.get('name') and 'is-invalid' or ''}" t-att-value="name" required="True" />
                                            </div>
                                        </div>
                                        <div t-attf-class="form-group #{error.get('email') and 'o_has_error' or ''} col-xl-6">
-                                           <label class="control-label" for="email">Your Email</label>
+                                           <label class="control-label" for="email">Correo electronico</label>
                                            <div>
                                                <input type="text" name="email" t-attf-class="form-control #{error.get('email') and 'is-invalid' or ''}" t-att-value="email" required="True" />
                                            </div>
                                        </div>
                                        <div t-attf-class="form-group #{error.get('phone') and 'o_has_error' or ''} col-xl-6">
-                                           <label class="control-label" for="phone">Your Phone</label>
+                                           <label class="control-label" for="phone">Telefono</label>
                                            <div>
                                                <input type="text" name="phone" t-attf-class="form-control #{error.get('phone') and 'is-invalid' or ''}" t-att-value="phone" required="True" />
                                            </div>
                                        </div>
                                    </t>
-                                   <div class="form-group col-xl-6"></div>
+                                   <!--<div class="form-group col-xl-6"></div>
                                    <div class="form-group col-xl-6">
-                                       <label class="control-label" for="appointment_option">Subject</label>
+                                       <label class="control-label" for="appointment_option">Tipo</label>
                                        <div>
                                            <select id="appointment_option_id" required="True" name="appointment_option_id" class="form-control">
-                                               <option value="">Select</option>
+                                               <option value="">Seleciona</option>
                                                <t t-foreach="appointment_options" t-as="ao">
                                                    <option t-att-value="ao.id" t-att-selected="ao.id == appointment_option_id">
                                                        <t t-esc="ao.name" />
@@ -74,10 +74,10 @@
                                        </div>
                                    </div>
                                    <div class="form-group col-xl-6">
-                                       <label class="control-label" for="appointee_id">With</label>
+                                       <label class="control-label" for="appointee_id">Doctor</label>
                                        <div>
                                            <select id="appointee_id" required="True" name="appointee_id" class="form-control">
-                                               <option value="">Select</option>
+                                               <option value="">Seleccionar</option>
                                                <t t-foreach="appointees" t-as="o">
                                                    <option t-att-value="o.id" t-att-selected="o.id == appointee_id">
                                                        <t t-esc="o.name" />
@@ -87,7 +87,7 @@
                                        </div>
                                    </div>
                                    <div t-attf-class="form-group #{error and 'appointment_date' in error and 'has-error' or ''} col-xl-6">
-                                       <label class="control-label" for="appointment_date">Appointment Date</label>
+                                       <label class="control-label" for="appointment_date">Fecha de la cita</label>
                                        <div>
                                            <div class='input-group date'>
                                                <input id ="appointment_date" name="appointment_date"  class="form-control datepicker" required="True" placeholder="dd/mm/yyyy" t-att-value="appointment_date"/>
@@ -95,10 +95,10 @@
                                        </div>
                                    </div>
                                    <div class="form-group col-xl-6">
-                                       <label class="control-label" for="timeslot_id">Timeslot</label>
+                                       <label class="control-label" for="timeslot_id">Hora</label>
                                        <div>
                                            <select id="timeslot_id" required="True" name="timeslot_id" class="form-control">
-                                               <option value="">Select</option>
+                                               <option value="">Selecciona</option>
                                                <t t-foreach="timeslots" t-as="t">
                                                    <option t-att-value="t['id']" t-att-selected="t['id'] == timeslot_id">
                                                        <t t-esc="t['timeslot']" />
@@ -106,9 +106,9 @@
                                                </t>
                                            </select>
                                        </div>
-                                   </div>
+                                   </div> -->
                                    <div class="form-group col-lg-12">
-                                       <label class="control-label" for="remarks">Remarks</label>
+                                       <label class="control-label" for="remarks">Descripcion de los sintomas</label>
                                        <div>
                                            <textarea class="form-control" cols="60" name="remarks" rows="6"><t t-esc="remarks"/></textarea>
                                        </div>
@@ -116,7 +116,7 @@
 
                                    <div class="form-group col-lg-12">
                                        <div>
-                                           <button class="btn btn-success">Submit</button>
+                                           <button class="btn btn-success">Agendar</button>
                                        </div>
                                    </div>
                                </div>
@@ -136,13 +136,13 @@
                                 <div class="col-12">
                                     <div class="alert alert-danger">
                                         <button type="button" class="close" data-dismiss="alert">&amp;times;</button>
-                                        <h2>Sorry, no access!</h2>
-                                        <p>To schedule an appointment please,
+                                        <h2>Lo sentimos, no hay acceso!</h2>
+                                        <p>Para programar una cita, por favor,
                                             <t t-if="request.env['res.users'].sudo()._get_signup_invitation_scope() == 'b2c'">
-                                                <a t-attf-href="/web/signup?redirect={{ quote_plus(request.httprequest.path) }}">Sign Up</a>
-                                                or
+                                                <a t-attf-href="/web/signup?redirect={{ quote_plus(request.httprequest.path) }}">Registrate</a>
+                                                o
                                             </t>
-                                            <a t-attf-href="/web/login?redirect={{ quote_plus(request.httprequest.path) }}">Sign In</a> to access this page.
+                                            <a t-attf-href="/web/login?redirect={{ quote_plus(request.httprequest.path) }}">Inicia sesion</a> para acceder a esta pagina.
                                         </p>
                                     </div>
                                 </div>
@@ -169,15 +169,51 @@
                             <div class="col-12">
                                 <div class="alert alert-success">
                                      <button type="button" class="close" data-dismiss="alert">&amp;times;</button>
-                                     <h2>Appointment scheduled!</h2>
+                                     <h2>Cita programada creada y en espera de asignacion!</h2>
                                      <t t-if="appointment">
-                                         <p>Your Appointment <b><span t-field="appointment.name"/></b> has been scheduled for <b><span t-field="appointment.start_datetime"/></b>.</p>
+                                         <p>Tu cita <b><span t-field="appointment.name"/></b> se agendó para <b><span t-field="appointment.start_datetime"/></b>.</p>
                                      </t>
                                      <t t-else="">
-                                        <p>Your Appointment has been scheduled.</p>
+                                        <p>Tu cita se creo correctamente</p>
                                      </t>
-                                     <p>Thank You!</p>
+                                     <p>Gracias!</p>
                                 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="oe_structure"/>
+                </div>
+            </t>
+        </template>
+
+        <template id="s2u_online_appointment.pay" name="Appointment Scheduled">
+            <t t-call="website.layout">
+                <div id="wrap">
+                    <div class="oe_structure"/>
+                    <div class="container">
+                        <div t-if="error_message" class="row">
+                            <div class="col-lg-12">
+                                <div class="alert alert-danger" role="alert">
+                                    <t t-foreach="error_message" t-as="err"><t t-esc="err"/><br /></t>
+                                </div>
+                            </div>
+                        </div>
+                        <div t-else="" class="row">
+                            <div class="col-12">
+                                <div class="alert alert-success">
+                                     <button type="button" class="close" data-dismiss="alert">&amp;times;</button>
+                                     <h2>ya falta solo un paso mas!</h2>
+                                     <t t-if="appointment">
+                                         <p>Tu cita se creo normal, sin embargo falta algo mas importante .. pagar</p>
+                                     </t>
+                                     <t t-else="">
+                                        <p>Tu cita se creo normal, sin embargo falta pagar</p>
+                                     </t>
+                                     <p>Pagar ahora!</p>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <p> aqui va el formulario de checkout personalizado</p>
                             </div>
                         </div>
                     </div>
