update update view

--- a/views/appointment_portal_template.xml
+++ b/views/appointment_portal_template.xml
@@ -15,7 +15,7 @@
     <template id="portal_my_home" name="Portal My Home: appointment entries" inherit_id="portal.portal_my_home" priority="40">
         <xpath expr="//div[hasclass('o_portal_docs')]" position="inside">
             <t t-if="appointment_count" t-call="portal.portal_docs_entry">
-                <t t-set="title">Citas pendientes por pago</t>
+                <t t-set="title">Citas pendientes para agendamiento</t>
                 <t t-set="url" t-value="'/my/online-appointments'"/>
                 <t t-set="count" t-value="appointment_count"/>
             </t>
