update font bold and black

--- a/static/src/css/stylesheet.css
+++ b/static/src/css/stylesheet.css
@@ -18,3 +18,10 @@
     font-style: normal;
 
 }
+@font-face {
+    font-family: 'frutigerbold';
+    src: url('frutiger-bold_18817-webfont.woff2') format('woff2'),
+         url('frutiger-bold_18817-webfont.woff') format('woff');
+    font-weight: 900;
+    font-style: normal;
+}
