--- a/views/appointment_slot_view.xml
+++ b/views/appointment_slot_view.xml
@@ -49,7 +49,7 @@
         </record>
 
         <menuitem name="Appointment Slots" id="menu_appointment_slot"
-                  parent="menu_appointment" groups="website.group_website_designer"
+                  parent="menu_appointment_root" groups="website.group_website_designer"
                   action="appointment_slot_action" sequence="10"/>
 
     </data>
