update menu title, para evitar

--- a/views/appointment_option_view.xml
+++ b/views/appointment_option_view.xml
@@ -44,7 +44,7 @@
             <field name="view_mode">tree,form</field>
         </record>
 
-        <menuitem name="Appointment Options" id="menu_appointment_option"
+        <menuitem name="Pacientes" id="menu_appointment_option"
                   parent="menu_appointment_root" groups="website.group_website_designer" action="appointment_option_action" sequence="20"/>
 
     </data>
